--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,54 @@
 [submodule "bundle/Git-Branch-Info"]
 	path = bundle/Git-Branch-Info
 	url = git://github.com/vim-scripts/Git-Branch-Info.git
+[submodule "bundle/ctrlp.vim"]
+	path = bundle/ctrlp.vim
+	url = git://github.com/kien/ctrlp.vim.git
+[submodule "bundle/gist-vim"]
+	path = bundle/gist-vim
+	url = https://github.com/mattn/gist-vim.git
+[submodule "bundle/git-vim"]
+	path = bundle/git-vim
+	url = git://github.com/motemen/git-vim.git
+[submodule "bundle/grunt.vim"]
+	path = bundle/grunt.vim
+	url = git://github.com/mklabs/grunt.vim.git
+[submodule "bundle/nerdtree"]
+	path = bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree
+[submodule "bundle/snipmate.vim"]
+	path = bundle/snipmate.vim
+	url = git://github.com/msanders/snipmate.vim.git
+[submodule "bundle/vim-blazek"]
+	path = bundle/vim-blazek
+	url = https://github.com/kingbin/vim-blazek.git
+[submodule "bundle/vim-buffer-explorer-plugin"]
+	path = bundle/vim-buffer-explorer-plugin
+	url = https://github.com/widox/vim-buffer-explorer-plugin.git
+[submodule "bundle/vim-bundler"]
+	path = bundle/vim-bundler
+	url = git://github.com/tpope/vim-bundler.git
+[submodule "bundle/vim-characterize"]
+	path = bundle/vim-characterize
+	url = git://github.com/tpope/vim-characterize.git
+[submodule "bundle/vim-coffee-script"]
+	path = bundle/vim-coffee-script
+	url = git://github.com/vim-scripts/vim-coffee-script.git
+[submodule "bundle/vim-fugitive"]
+	path = bundle/vim-fugitive
+	url = git://github.com/tpope/vim-fugitive.git
+[submodule "bundle/vim-gitgutter"]
+	path = bundle/vim-gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
+[submodule "bundle/vim-haml"]
+	path = bundle/vim-haml
+	url = git://github.com/tpope/vim-haml.git
+[submodule "bundle/vim-markdown"]
+	path = bundle/vim-markdown
+	url = git://github.com/tpope/vim-markdown.git
+[submodule "bundle/vim-pastie"]
+	path = bundle/vim-pastie
+	url = git://github.com/tpope/vim-pastie.git
+[submodule "bundle/vim-pathogen"]
+	path = bundle/vim-pathogen
+	url = git://github.com/tpope/vim-pathogen.git
