--- a/.gitmodules
+++ b/.gitmodules
@@ -60,4 +60,13 @@
 	url = https://github.com/mattn/webapi-vim.git
 [submodule "bundle/vim-abolish"]
 	path = bundle/vim-abolish
-	url = git://github.com/tpope/vim-abolish.git
+  url = git://github.com/tpope/vim-abolish.git
+[submodule "bundle/powerline"]
+	path = bundle/powerline
+  url = git://github.com/Lokaltog/vim-powerline.git
+[submodule "bundle/vim-statline"]
+	path = bundle/vim-statline
+  url = git://github.com/millermedeiros/vim-statline.git
+[submodule "bundle/syntastic"]
+	path = bundle/syntastic
+	url = git://github.com/scrooloose/syntastic.git
