--- a/.gitmodules
+++ b/.gitmodules
@@ -1,78 +1,87 @@
 [submodule "bundle/Git-Branch-Info"]
-	path = bundle/Git-Branch-Info
-	url = git://github.com/vim-scripts/Git-Branch-Info.git
+  path = bundle/Git-Branch-Info
+  url = git://github.com/vim-scripts/Git-Branch-Info.git
 [submodule "bundle/ctrlp.vim"]
-	path = bundle/ctrlp.vim
-	url = git://github.com/kien/ctrlp.vim.git
+  path = bundle/ctrlp.vim
+  url = git://github.com/kien/ctrlp.vim.git
 [submodule "bundle/gist-vim"]
-	path = bundle/gist-vim
-	url = https://github.com/mattn/gist-vim.git
+  path = bundle/gist-vim
+  url = https://github.com/mattn/gist-vim.git
 [submodule "bundle/git-vim"]
-	path = bundle/git-vim
-	url = git://github.com/motemen/git-vim.git
+  path = bundle/git-vim
+  url = git://github.com/motemen/git-vim.git
 [submodule "bundle/grunt.vim"]
-	path = bundle/grunt.vim
-	url = git://github.com/mklabs/grunt.vim.git
+  path = bundle/grunt.vim
+  url = git://github.com/mklabs/grunt.vim.git
 [submodule "bundle/nerdtree"]
-	path = bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree
+  path = bundle/nerdtree
+  url = https://github.com/scrooloose/nerdtree
 [submodule "bundle/snipmate.vim"]
-	path = bundle/snipmate.vim
-	url = git://github.com/msanders/snipmate.vim.git
+  path = bundle/snipmate.vim
+  url = git://github.com/msanders/snipmate.vim.git
 [submodule "bundle/vim-blazek"]
-	path = bundle/vim-blazek
-	url = https://github.com/kingbin/vim-blazek.git
+  path = bundle/vim-blazek
+  url = https://github.com/kingbin/vim-blazek.git
 [submodule "bundle/vim-buffer-explorer-plugin"]
-	path = bundle/vim-buffer-explorer-plugin
-	url = https://github.com/widox/vim-buffer-explorer-plugin.git
+  path = bundle/vim-buffer-explorer-plugin
+  url = https://github.com/widox/vim-buffer-explorer-plugin.git
 [submodule "bundle/vim-characterize"]
-	path = bundle/vim-characterize
-	url = git://github.com/tpope/vim-characterize.git
+  path = bundle/vim-characterize
+  url = git://github.com/tpope/vim-characterize.git
 [submodule "bundle/vim-coffee-script"]
-	path = bundle/vim-coffee-script
-	url = git://github.com/vim-scripts/vim-coffee-script.git
+  path = bundle/vim-coffee-script
+  url = git://github.com/vim-scripts/vim-coffee-script.git
 [submodule "bundle/vim-fugitive"]
-	path = bundle/vim-fugitive
-	url = git://github.com/tpope/vim-fugitive.git
+  path = bundle/vim-fugitive
+  url = git://github.com/tpope/vim-fugitive.git
 [submodule "bundle/vim-gitgutter"]
-	path = bundle/vim-gitgutter
-	url = git://github.com/airblade/vim-gitgutter.git
+  path = bundle/vim-gitgutter
+  url = git://github.com/airblade/vim-gitgutter.git
 [submodule "bundle/vim-haml"]
-	path = bundle/vim-haml
-	url = git://github.com/tpope/vim-haml.git
+  path = bundle/vim-haml
+  url = git://github.com/tpope/vim-haml.git
 [submodule "bundle/vim-markdown"]
-	path = bundle/vim-markdown
-	url = git://github.com/tpope/vim-markdown.git
+  path = bundle/vim-markdown
+  url = git://github.com/tpope/vim-markdown.git
 [submodule "bundle/vim-pastie"]
-	path = bundle/vim-pastie
-	url = git://github.com/tpope/vim-pastie.git
+  path = bundle/vim-pastie
+  url = git://github.com/tpope/vim-pastie.git
 [submodule "bundle/vim-pathogen"]
-	path = bundle/vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
+  path = bundle/vim-pathogen
+  url = git://github.com/tpope/vim-pathogen.git
 [submodule "bundle/vim-ag"]
-	path = bundle/vim-ag
-	url = https://github.com/epmatsw/ag.vim.git
+  path = bundle/vim-ag
+  url = https://github.com/epmatsw/ag.vim.git
 [submodule "bundle/tabular"]
-	path = bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
+  path = bundle/tabular
+  url = https://github.com/godlygeek/tabular.git
 [submodule "bundle/vim-webapi"]
-	path = bundle/vim-webapi
-	url = https://github.com/mattn/webapi-vim.git
+  path = bundle/vim-webapi
+  url = https://github.com/mattn/webapi-vim.git
 [submodule "bundle/vim-abolish"]
-	path = bundle/vim-abolish
+  path = bundle/vim-abolish
   url = git://github.com/tpope/vim-abolish.git
 [submodule "bundle/powerline"]
-	path = bundle/powerline
+  path = bundle/powerline
   url = git://github.com/Lokaltog/vim-powerline.git
 [submodule "bundle/vim-statline"]
-	path = bundle/vim-statline
+  path = bundle/vim-statline
   url = git://github.com/millermedeiros/vim-statline.git
 [submodule "bundle/syntastic"]
-	path = bundle/syntastic
-	url = git://github.com/scrooloose/syntastic.git
+  path = bundle/syntastic
+  url = git://github.com/scrooloose/syntastic.git
 [submodule "bundle/vim-repeat"]
-	path = bundle/vim-repeat
-	url = git://github.com/tpope/vim-repeat.git
+  path = bundle/vim-repeat
+  url = git://github.com/tpope/vim-repeat.git
 [submodule "bundle/vim-surround"]
-	path = bundle/vim-surround
-	url = git://github.com/tpope/vim-surround.git
+  path = bundle/vim-surround
+  url = git://github.com/tpope/vim-surround.git
+[submodule "bundle/kompressor"]
+  path = bundle/kompressor
+  url = https://github.com/antonshulgin/kompressor.vim.git
+[submodule "bundle/vim-json"]
+  path = bundle/vim-json
+  url = https://github.com/elzr/vim-json.git
+[submodule "bundle/tslime.vim"]
+  path = bundle/tslime.vim
+  url = https://github.com/jgdavey/tslime.vim.git
