--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "bundle/tslime.vim"]
 	path = bundle/tslime.vim
 	url = https://github.com/kikijump/tslime.vim.git
+[submodule "bundle/vim-tcomment"]
+	path = bundle/vim-tcomment
+	url = git@github.com:tomtom/tcomment_vim.git
