--- a/.gitmodules
+++ b/.gitmodules
@@ -1,93 +1,124 @@
 [submodule "bundle/Git-Branch-Info"]
   path = bundle/Git-Branch-Info
   url = git://github.com/vim-scripts/Git-Branch-Info.git
+  ignore = dirty
 [submodule "bundle/ctrlp.vim"]
   path = bundle/ctrlp.vim
   url = git://github.com/kien/ctrlp.vim.git
+  ignore = dirty
 [submodule "bundle/gist-vim"]
   path = bundle/gist-vim
   url = https://github.com/mattn/gist-vim.git
+  ignore = dirty
 [submodule "bundle/git-vim"]
   path = bundle/git-vim
   url = git://github.com/motemen/git-vim.git
+  ignore = dirty
 [submodule "bundle/grunt.vim"]
   path = bundle/grunt.vim
   url = git://github.com/mklabs/grunt.vim.git
+  ignore = dirty
 [submodule "bundle/nerdtree"]
   path = bundle/nerdtree
   url = https://github.com/scrooloose/nerdtree
+  ignore = dirty
 [submodule "bundle/snipmate.vim"]
   path = bundle/snipmate.vim
   url = git://github.com/msanders/snipmate.vim.git
+  ignore = dirty
 [submodule "bundle/vim-blazek"]
   path = bundle/vim-blazek
   url = https://github.com/kingbin/vim-blazek.git
+  ignore = dirty
 [submodule "bundle/vim-buffer-explorer-plugin"]
   path = bundle/vim-buffer-explorer-plugin
   url = https://github.com/widox/vim-buffer-explorer-plugin.git
+  ignore = dirty
 [submodule "bundle/vim-characterize"]
   path = bundle/vim-characterize
   url = git://github.com/tpope/vim-characterize.git
+  ignore = dirty
 [submodule "bundle/vim-coffee-script"]
   path = bundle/vim-coffee-script
   url = git://github.com/vim-scripts/vim-coffee-script.git
+  ignore = dirty
 [submodule "bundle/vim-fugitive"]
   path = bundle/vim-fugitive
   url = git://github.com/tpope/vim-fugitive.git
+  ignore = dirty
 [submodule "bundle/vim-gitgutter"]
   path = bundle/vim-gitgutter
   url = git://github.com/airblade/vim-gitgutter.git
+  ignore = dirty
 [submodule "bundle/vim-haml"]
   path = bundle/vim-haml
   url = git://github.com/tpope/vim-haml.git
+  ignore = dirty
 [submodule "bundle/vim-markdown"]
   path = bundle/vim-markdown
   url = git://github.com/tpope/vim-markdown.git
+  ignore = dirty
 [submodule "bundle/vim-pastie"]
   path = bundle/vim-pastie
   url = git://github.com/tpope/vim-pastie.git
+  ignore = dirty
 [submodule "bundle/vim-pathogen"]
   path = bundle/vim-pathogen
   url = git://github.com/tpope/vim-pathogen.git
+  ignore = dirty
 [submodule "bundle/vim-ag"]
   path = bundle/vim-ag
   url = https://github.com/epmatsw/ag.vim.git
+  ignore = dirty
 [submodule "bundle/tabular"]
   path = bundle/tabular
   url = https://github.com/godlygeek/tabular.git
+  ignore = dirty
 [submodule "bundle/vim-webapi"]
   path = bundle/vim-webapi
   url = https://github.com/mattn/webapi-vim.git
+  ignore = dirty
 [submodule "bundle/vim-abolish"]
   path = bundle/vim-abolish
   url = git://github.com/tpope/vim-abolish.git
+  ignore = dirty
 [submodule "bundle/powerline"]
   path = bundle/powerline
   url = git://github.com/Lokaltog/vim-powerline.git
+  ignore = dirty
 [submodule "bundle/vim-statline"]
   path = bundle/vim-statline
   url = git://github.com/millermedeiros/vim-statline.git
+  ignore = dirty
 [submodule "bundle/syntastic"]
   path = bundle/syntastic
   url = git://github.com/scrooloose/syntastic.git
+  ignore = dirty
 [submodule "bundle/vim-repeat"]
   path = bundle/vim-repeat
   url = git://github.com/tpope/vim-repeat.git
+  ignore = dirty
 [submodule "bundle/vim-surround"]
   path = bundle/vim-surround
   url = git://github.com/tpope/vim-surround.git
+  ignore = dirty
 [submodule "bundle/kompressor"]
   path = bundle/kompressor
   url = https://github.com/antonshulgin/kompressor.vim.git
+  ignore = dirty
 [submodule "bundle/vim-json"]
   path = bundle/vim-json
   url = https://github.com/elzr/vim-json.git
+  ignore = dirty
 [submodule "bundle/minibufexpl.vim"]
-	path = bundle/minibufexpl.vim
-	url = https://github.com/fholgado/minibufexpl.vim.git
+  path = bundle/minibufexpl.vim
+  url = https://github.com/fholgado/minibufexpl.vim.git
+  ignore = dirty
 [submodule "bundle/tslime.vim"]
-	path = bundle/tslime.vim
-	url = https://github.com/kikijump/tslime.vim.git
+  path = bundle/tslime.vim
+  url = https://github.com/kikijump/tslime.vim.git
+  ignore = dirty
 [submodule "bundle/vim-tcomment"]
-	path = bundle/vim-tcomment
-	url = git@github.com:tomtom/tcomment_vim.git
+  path = bundle/vim-tcomment
+  url = git@github.com:tomtom/tcomment_vim.git
+  ignore = dirty
