--- a/.gitmodules
+++ b/.gitmodules
@@ -137,3 +137,6 @@
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
 	url = git@github.com:tpope/vim-fugitive.git
+[submodule "bundle/dash.vim"]
+	path = bundle/dash.vim
+	url = git@github.com:rizzatti/dash.vim.git
