--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
   ignore = dirty
 [submodule "bundle/ctrlp.vim"]
   path = bundle/ctrlp.vim
-  url = git://github.com/kien/ctrlp.vim.git
+  url = git://github.com/ctrlpvim/ctrlp.vim.git
   ignore = dirty
 [submodule "bundle/gist-vim"]
   path = bundle/gist-vim
@@ -76,7 +76,7 @@
   ignore = dirty
 [submodule "bundle/syntastic"]
   path = bundle/syntastic
-  url = git://github.com/scrooloose/syntastic.git
+  url = git://github.com/vim-syntastic/syntastic.git
   ignore = dirty
 [submodule "bundle/vim-repeat"]
   path = bundle/vim-repeat
@@ -140,9 +140,9 @@
 [submodule "bundle/ultisnips"]
 	path = bundle/ultisnips
 	url = git@github.com:SirVer/ultisnips.git
-[submodule "bundle/completeme_you"]
-	path = bundle/completeme_you
-	url = git@github.com:valloric/youcompleteme.git
 [submodule "bundle/dash"]
 	path = bundle/dash
 	url = git@github.com:rizzatti/dash.vim.git
+[submodule "bundle/vim-airline-themes"]
+	path = bundle/vim-airline-themes
+	url = git@github.com:vim-airline/vim-airline-themes.git
