syncing vim configs across development machines

--- a/.gitmodules
+++ b/.gitmodules
@@ -143,6 +143,12 @@
 [submodule "bundle/dash"]
 	path = bundle/dash
 	url = git@github.com:rizzatti/dash.vim.git
+[submodule "bundle/fzf"]
+	path = bundle/fzf
+	url = git@github.com:junegunn/fzf.git
+[submodule "bundle/ack"]
+	path = bundle/ack
+	url = git@github.com:mileszs/ack.vim.git
 [submodule "bundle/vim-airline-themes"]
 	path = bundle/vim-airline-themes
 	url = git@github.com:vim-airline/vim-airline-themes.git
