--- a/.gitmodules
+++ b/.gitmodules
@@ -146,3 +146,6 @@
 [submodule "bundle/vim-airline-themes"]
 	path = bundle/vim-airline-themes
 	url = git@github.com:vim-airline/vim-airline-themes.git
+[submodule "bundle/ycm"]
+	path = bundle/ycm
+	url = git@github.com:Valloric/YouCompleteMe.git
