--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "bundle/Git-Branch-Info"]
   path = bundle/Git-Branch-Info
-  url = git@github.com/vim-scripts/Git-Branch-Info.git
+  url = git://github.com/vim-scripts/Git-Branch-Info.git
   ignore = dirty
 [submodule "bundle/ctrlp.vim"]
   path = bundle/ctrlp.vim
-  url = git@github.com:ctrlpvim/ctrlp.vim.git
+  url = git://github.com/ctrlpvim/ctrlp.vim.git
   ignore = dirty
 [submodule "bundle/gist-vim"]
   path = bundle/gist-vim
@@ -12,7 +12,7 @@
   ignore = dirty
 [submodule "bundle/grunt.vim"]
   path = bundle/grunt.vim
-  url = git@github.com/mklabs/grunt.vim.git
+  url = git://github.com/mklabs/grunt.vim.git
   ignore = dirty
 [submodule "bundle/nerdtree"]
   path = bundle/nerdtree
@@ -24,35 +24,35 @@
   ignore = dirty
 [submodule "bundle/vim-characterize"]
   path = bundle/vim-characterize
-  url = git@github.com/tpope/vim-characterize.git
+  url = git://github.com/tpope/vim-characterize.git
   ignore = dirty
 [submodule "bundle/vim-coffee-script"]
   path = bundle/vim-coffee-script
-  url = git@github.com/vim-scripts/vim-coffee-script.git
+  url = git://github.com/vim-scripts/vim-coffee-script.git
   ignore = dirty
 [submodule "bundle/vim-fugitive"]
   path = bundle/vim-fugitive
-  url = git@github.com/tpope/vim-fugitive.git
+  url = git://github.com/tpope/vim-fugitive.git
   ignore = dirty
 [submodule "bundle/vim-gitgutter"]
   path = bundle/vim-gitgutter
-  url = git@github.com/airblade/vim-gitgutter.git
+  url = git://github.com/airblade/vim-gitgutter.git
   ignore = dirty
 [submodule "bundle/vim-haml"]
   path = bundle/vim-haml
-  url = git@github.com/tpope/vim-haml.git
+  url = git://github.com/tpope/vim-haml.git
   ignore = dirty
 [submodule "bundle/vim-markdown"]
   path = bundle/vim-markdown
-  url = git@github.com/tpope/vim-markdown.git
+  url = git://github.com/tpope/vim-markdown.git
   ignore = dirty
 [submodule "bundle/vim-pastie"]
   path = bundle/vim-pastie
-  url = git@github.com/tpope/vim-pastie.git
+  url = git://github.com/tpope/vim-pastie.git
   ignore = dirty
 [submodule "bundle/vim-pathogen"]
   path = bundle/vim-pathogen
-  url = git@github.com/tpope/vim-pathogen.git
+  url = git://github.com/tpope/vim-pathogen.git
   ignore = dirty
 [submodule "bundle/vim-ag"]
   path = bundle/vim-ag
@@ -68,23 +68,23 @@
   ignore = dirty
 [submodule "bundle/vim-abolish"]
   path = bundle/vim-abolish
-  url = git@github.com/tpope/vim-abolish.git
+  url = git://github.com/tpope/vim-abolish.git
   ignore = dirty
 [submodule "bundle/powerline"]
   path = bundle/powerline
-  url = git@github.com/Lokaltog/vim-powerline.git
+  url = git://github.com/Lokaltog/vim-powerline.git
   ignore = dirty
 [submodule "bundle/syntastic"]
   path = bundle/syntastic
-  url = git@github.com:vim-syntastic/syntastic.git
+  url = git://github.com/vim-syntastic/syntastic.git
   ignore = dirty
 [submodule "bundle/vim-repeat"]
   path = bundle/vim-repeat
-  url = git@github.com/tpope/vim-repeat.git
+  url = git://github.com/tpope/vim-repeat.git
   ignore = dirty
 [submodule "bundle/vim-surround"]
   path = bundle/vim-surround
-  url = git@github.com/tpope/vim-surround.git
+  url = git://github.com/tpope/vim-surround.git
   ignore = dirty
 [submodule "bundle/vim-json"]
   path = bundle/vim-json
@@ -146,9 +146,6 @@
 [submodule "bundle/vim-airline-themes"]
 	path = bundle/vim-airline-themes
 	url = git@github.com:vim-airline/vim-airline-themes.git
-[submodule "bundle/ycm"]
-	path = bundle/ycm
-	url = git@github.com:Valloric/YouCompleteMe.git
 [submodule "bundle/yats"]
 	path = bundle/yats
 	url = git@github.com:HerringtonDarkholme/yats.vim.git
@@ -161,3 +158,9 @@
 [submodule "bundle/vim-prettier"]
 	path = bundle/vim-prettier
 	url = git@github.com:prettier/vim-prettier.git
+[submodule "bundle/ycm"]
+	path = bundle/ycm
+	url = git@github.com:Valloric/YouCompleteMe.git
+[submodule "bundle/php-cs-fixer"]
+	path = bundle/php-cs-fixer
+	url = git@github.com:stephpy/vim-php-cs-fixer.git
